# gnubg-nn

./: .gitignore  Makefile.am  Makefile_linux  README  configure.ac  find_best_move.py  gnubg_api.cc  gnubgmodule.cpp  output.funcs  output.tree  setup.py  test_eval.py  test_linux.py  test_module.py
.github/workflow/: pypi.yml
.github/workflows/: lint.yml  linux.yml  pull-request.yml  pypi.yml  test.yml
analyze/: Makefile.am
doc/: gnubg-nn.texi
gnubg/: Makefile.am  bearoffdb.c  bearoffdb.h  eval.c  eval.h  inputs.c  osr.cc  positionid.h  pub_eval.c
gnubg/lib/: Makefile.am  hash.c  sse.h
py/: .gitignore  MANFEST.in  Makefile  Makefile.am  build_py3mod.sh  py3mod.cpp  pygnubg.cc  pyproject.toml  setup.py  test.py
py/2.7/: .gitignore  Makefile.am
py/gnubg/: .gitignore
py/gnubg/lib/: hash.c
py/tests/: test.py
sa/: GetOpt.cc  Makefile.am
scripts/play/: sandbox.py
