[tool.poetry]
name = "gnubg"
version = "1.01"
description = "Python bindings for GNUBG neural evaluation"
authors = ["David Reay <dr323090@falmouth.ac.uk>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.dev.dependencies]
setuptools = "^80.4.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
package-mode = false